# graphene-desktop

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  config.h.in  graphene-panel.desktop.in  graphene-wm.desktop.in  graphene.desktop  makefile  vos.desktop
applets/clock/: clock.py
applets/launcher/: launcher.py
applets/settings/: battery.py  settings.plugin  settings.py  volume.py
applets/tasklist/: tasklist.py
cmake/: FindGObjectIntrospection.cmake
common/: dbusmonitor.c  dbusmonitor.h  sound.h
data/: panel-fallback.css  panel.css
data/applets/clock/: clock.plugin  clock.py
data/applets/launcher/: launcher.plugin  launcher.py
data/applets/settings/: battery.py  network.py  settings.plugin  settings.py  users.py  volume.py
data/applets/tasklist/: tasklist.plugin  tasklist.py
data/autostart/: graphene-panel.desktop  graphene-wm.desktop
lib/: applet-extension.c  applet-extension.h  materialbox.c  materialbox.h  panel.c  panel.h  system-volume-control.c  system-volume-control.h
panel/: CMakeLists.txt  main.c  materialbox.c  notifications.c  notifications.h  panel-main.c  panel-style.css  panel.c  panel.h  system-volume-control.c
panel/clock/: clock-applet.c  clock-applet.h
panel/launcher/: launcher-applet.c  launcher-applet.h
panel/settings/: battery.c  battery.h  network.c  network.h  settings-applet.c  settings-applet.h  users.c  users.h  volume.c  volume.h
panel/tasklist/: tasklist-applet.c  tasklist-applet.h
schemas/: io.velt.desktop.keybindings.gschema.xml
session/: CMakeLists.txt  background.c  background.h  client.c  client.h  client.txt  dialog.c  dialog.h  logout-dialog.h  main.c  percent-floater.c  pkauthdialog.c  session-dbus-iface.xml  session.c  session.h  session2.c  status-notifier-watcher.c  util.c  util.h  wm.c  wm.h
session/cmk/: button.c  button.h  cmk-widget.c  cmk-widget.h  shadow.c  shadow.h  style.c
session/wmwidgets/: dialog.c  dialog.h  percent-floater.h  pkauthdialog.c  pkauthdialog.h  style.h
src/: CMakeLists.txt  background.c  client.c  client.h  dialog.c  dialog.h  logout-dialog.c  main.c  network.c  network.h  notifications-dbus-iface.xml  notifications.c  notifications.h  panel-clock.c  panel-internal.h  panel-launcher.c  panel-settings.c  panel.c  panel.h  pkauthdialog.c  pkauthdialog.h  session.c  session.h  settings-battery.c  settings-battery.h  sound.c  sound.h  status-icons.c  status-icons.h  status-notifier-dbus-ifaces.xml  status-notifier-watcher.c  status-notifier-watcher.h  util.c  util.h  window.h  wm.c  wm.h
src/applets/: clock.c  clock.h  launcher.c  launcher.h
src/csk/: audio.c  audio.h
wm/: CMakeLists.txt  background.c  background.h  dialog.c  dialog.h  wm.c  wm.h
